//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table FormCatalogs {
  id Int [pk, increment]
  name String [not null]
  description String
  region String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  sections Sections [not null]
}

Table Sections {
  id Int [pk, increment]
  name String [not null]
  description String
  formId Int
  form FormCatalogs
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  QuestionSection QuestionSections [not null]
  parentId Int
  parentSection Sections
  subSections Sections [not null]
}

Table Questions {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  answerSchema String [not null]
  quid Int [not null]
  scoreGuide String
  max_essential_indicators_score Int
  max_leadership_indicators_score Int
  esg ESG
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  Answer Answers [not null]
  QuestionSection QuestionSections [not null]
  GlobalSectionsQuestions GlobalSectionQuestions [not null]
}

Table QuestionSections {
  id Int [pk, increment]
  questionId Int [not null]
  sectionId Int [not null]
  question Questions [not null]
  section Sections [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Table Answers {
  id Int [pk, increment]
  clientId Int [not null]
  value String [not null]
  questionId Int [not null]
  question Questions [not null]
  valueType ValueType
  score Int
  score_explanation String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (clientId, questionId) [unique]
  }
}

Table GlobalSections {
  id Int [pk, increment]
  name String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  GlobalSectionsQuestions GlobalSectionQuestions [not null]
}

Table GlobalSectionQuestions {
  id Int [pk, increment]
  globalSectionId Int [not null]
  questionId Int [not null]
  globalSection GlobalSections [not null]
  question Questions [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
}

Enum ESG {
  E
  S
  G
}

Enum ValueType {
  GENERATED
  MANUAL
}

Ref: Sections.formId > FormCatalogs.id

Ref: Sections.parentId - Sections.id

Ref: QuestionSections.questionId > Questions.id

Ref: QuestionSections.sectionId > Sections.id

Ref: Answers.questionId > Questions.id

Ref: GlobalSectionQuestions.globalSectionId > GlobalSections.id

Ref: GlobalSectionQuestions.questionId > Questions.id